--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,15 @@
   </properties>
 
   <dependencies>
-  
+
+
+    <dependency>
+    <groupId>io.github.bonigarcia</groupId>
+    <artifactId>webdrivermanager</artifactId>
+    <version>5.4.3</version>
+    </dependency>
+
+    
    <dependency>
         <groupId>org.seleniumhq.selenium</groupId>
         <artifactId>selenium-java</artifactId>
